--- a/.gitignore
+++ b/.gitignore
@@ -2,6 +2,8 @@
 #Template for AL projects for Dynamics 365 Business Central
 #launch.json folder
 .vscode/
+# dependencies
+/node_modules
 #Cache folder
 .alcache/
 #Symbols folder
